# sot-dynamic

./: CMakeLists.txt  package.xml
python/: CMakeLists.txt
src/: CMakeLists.txt  sot-dynamic.cpp
